add some ca;culations

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript_learn</title>
-  <!--script tag for the console output types  -->
+    <!--script tag for the console output types  -->
     <script>
-    console.log("internal example for console.output");
+      console.log("internal example for console.output");
     </script>
     <script>
-     document.write("exmplefor document_write output");
+      document.write("exmplefor document_write output");
     </script>
   </head>
   <body>
@@ -20,6 +20,12 @@
       <h2 id="tag">The javascript</h2>
       <p>My First Paragraph</p>
     </div>
+    <script>
+      document.write(12 + 10);
+    </script>
+    <script>
+      document.write(23 * 2);
+    </script>
     <!---linking the external js file-->
     <script src="index.js"></script>
     <!--try it the windows alert-->
@@ -28,7 +34,7 @@
     </script>
     <!-- getelement id try-->
     <script>
-       document.getElementById("name").innerHTML = "javascript";
+      document.getElementById("name").innerHTML = "javascript";
     </script>
   </body>
 </html>
